--- a/WEBL/ClientApp/angular.json
+++ b/WEBL/ClientApp/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1,
+  "defaultProject": "WEBL",
   "newProjectRoot": "projects",
   "projects": {
     "WEBL": {
@@ -20,10 +20,10 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "assets": ["src/assets"],
+            "assets": [ "src/assets" ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
@@ -71,16 +71,16 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
-            "styles": ["src/styles.css"],
+            "styles": [ "src/styles.css" ],
             "scripts": [],
-            "assets": ["src/assets"]
+            "assets": [ "src/assets" ]
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["src/tsconfig.app.json", "src/tsconfig.spec.json"],
-            "exclude": ["**/node_modules/**"]
+            "tsConfig": [ "src/tsconfig.app.json", "src/tsconfig.spec.json" ],
+            "exclude": [ "**/node_modules/**" ]
           }
         },
         "server": {
@@ -126,11 +126,11 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "e2e/tsconfig.e2e.json",
-            "exclude": ["**/node_modules/**"]
+            "exclude": [ "**/node_modules/**" ]
           }
         }
       }
     }
   },
-  "defaultProject": "WEBL"
+  "version": 1
 }
