--- a/WEBL/ClientApp/angular.json
+++ b/WEBL/ClientApp/angular.json
@@ -23,7 +23,9 @@
             "assets": [ "src/assets" ],
             "styles": [
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/devextreme/dist/css/dx.common.css",
+              "node_modules/devextreme/dist/css/dx.light.css"
             ],
             "scripts": []
           },
