--- a/WEBL/ClientApp/package.json
+++ b/WEBL/ClientApp/package.json
@@ -26,6 +26,8 @@
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^3.4.1",
     "core-js": "^3.3.3",
+    "devextreme": "20.2.6",
+    "devextreme-angular": "20.2.6",
     "jquery": "3.4.1",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
